--- a/Tugas 7 Crud/CSS/mycss.css
+++ b/Tugas 7 Crud/CSS/mycss.css
@@ -5,13 +5,13 @@
 }
 
 body{
-    background-color: rgb(204, 199, 199);
+    background-color: rgb(164, 79, 167);
 }
 
 .row{
     background-color: white;
     border-radius: 30px;
-    box-shadow: 12px 12px 22px grey;   
+    box-shadow: 12px 12px 22px rgb(173, 100, 168);   
 }
 img{
   border-top-left-radius: 30px;
@@ -107,4 +107,24 @@ img {vertical-align: middle;}
     background-color: white;
     border: 1px solid;
     color: rgb(255, 103, 204);
+}
+
+.navbar{
+  background-color: white !important;
+}
+
+.colink{
+  background-color: white;
+  outline: none;
+  border: none;
+}
+
+.colink:hover{
+  background-color: white;
+  border: 1px solid;
+}
+
+.p1{
+  text-align: center;
+  color: white;
 }
